--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
        background-color: #8ae6dc;
    }
   #heading{
-      background: linear-gradient(rgba(0,0,0,0.5),#009688),url(images/bank.jpg);
+      background: linear-gradient(rgba(0,0,0,0.5),#009688),url(bank.jpg);
       background-size: cover;
       background-position: center;
       height: 100vh;
